--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,7 +8,7 @@ body {
 	height: 100vh;
 	width: 100vw;
   background-color: $oxford-blue;
-  background-image: url('/assets/images/ZB-Logo-White.png');
+  background-image: url('../images/ZB-Logo-White.png');
   background-size: 300px auto;
   background-repeat: no-repeat;
   background-position: center;
