--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -5,7 +5,7 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: #0A2141;
-  background-image: url("/assets/images/ZB-Logo-White.png");
+  background-image: url("../images/ZB-Logo-White.png");
   background-size: 300px auto;
   background-repeat: no-repeat;
   background-position: center; }
