Created the desktop view of navbar and intro page

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,15 +1,66 @@
-$oxford-blue: #0A2141;
+@import "colors";
+@import "fonts";
+@import "navigation";
 
 body {
-  margin: 0;
+  	margin: 0;
 }
 
-.wrapper {
-	height: 100vh;
+.intro_wrapper {
+	height: calc(100vh - 100px);
 	width: 100vw;
-  background-color: $oxford-blue;
-  background-image: url('../images/ZB-Logo-White.png');
-  background-size: 300px auto;
+  background: linear-gradient(180deg, #0A2141 0%, #F7F8F2 1087.17%);
+  background-image: url('../images/rocket-lg.png'), linear-gradient(180deg, #0A2141 0%, #F7F8F2 1087.17%);
+  background-size: contain;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: bottom;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
+.intro_container {
+  color: $spring-wood;
+  text-align: center;
+  width: 75%;
+  height: 75%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+}
+
+.intro_logo {
+  width: 50%;
+  height: auto;
+}
+
+.intro_content {
+  font-family: Lato-Hairline;
+  font-size: 2.5vw;
+  width: 65%;
+  margin-top: 20px;
+}
+
+.intro_btn {
+  font-family: Lato-Hairline;
+  font-size: 2vw;
+  margin-top: 20px;
+  padding-bottom: 1.5%;
+  border-bottom: 1px solid $zima-blue;
+  animation: fall-in 3s ease; 
+  transition: .2s ease-in-out;
+  &:hover {
+    padding-bottom: 1%;
+    transition: .2s ease-in-out;
+  }
+}
+
+@keyframes fall-in {
+  0% {
+    padding-bottom: 100%;
+  }
+  100% {
+    padding-bottom: 1.5%;
+  }
 }
