Created mobile version of the intro and navigation

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <div class="nav_wrapper">
-  <img src="assets/images/ZB-Logo-White.png" alt="ZB Logo" class="nav_logo">
+  <img src="assets/images/zb-logo-full-white.png" alt="ZB Logo" class="nav_logo">
   <div class="nav_link-wrapper">
     <div id="link-home" class="nav_link">HOME</div>
     <div id="link-about" class="nav_link">ABOUT</div>
@@ -9,7 +9,12 @@
   </div>
   <div class="nav_language-container">中文</div>
 </div>
-<div class="mbl-nav_menu-container">
-  <div class="mbl-nav_hamburger"></div>
-	
+<div class="mbl-nav_menu-container"></div>
+<div class="mbl-nav_hamburger"></div>
+<div class="mbl-nav_link-container hide">
+  <div class="mbl-nav_link">HOME</div>
+  <div class="mbl-nav_link">ABOUT</div>
+  <div class="mbl-nav_link">WORK</div>
+  <div class="mbl-nav_link">CONTACT</div>
+  <div class="mbl-nav_zb-logo"></div>
 </div>
