--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,5 +9,6 @@
   <body>
     {% include navigation.html %}
     {{ content }}
+    <script src="assets/js/mobile-navigation.js"></script>
   </body>
 </html>
