--- a/_sass/intro.scss
+++ b/_sass/intro.scss
@@ -54,7 +54,7 @@
 
 @media (max-width: 750px) {
   .intro_wrapper {
-    height: 130vh;
+    height: 175vh;
     background: linear-gradient(180deg, #0A2141 0%, #F7F8F2 750%);
     background-image: url('../images/mobile-rocket.png'), linear-gradient(180deg, #0A2141 0%, #F7F8F2 750%);
     background-size: contain;
@@ -87,14 +87,14 @@
   }
 
   .intro_content {
-    font-family: Lato-Hairline;
+    font-family: Lato-Light;
     font-size: 25px;
     width: 90%;
     margin-top: 20px;
   }
 
   .intro_btn {
-    font-family: Lato-Hairline;
+    font-family: Lato-Light;
     font-size: 20px;
     margin-top: 25px;
     padding-bottom: 1.5%;
