Added new CNAME file, built new files in docs

--- a/_sass/intro.scss
+++ b/_sass/intro.scss
@@ -94,7 +94,7 @@
   }
 
   .intro_btn {
-    font-family: Lato-Light;
+    font-family: Lato-Lightgst;
     font-size: 20px;
     margin-top: 25px;
     padding-bottom: 1.5%;
