--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -282,7 +282,7 @@
     margin-top: 20px; }
 
   .intro_btn {
-    font-family: Lato-Light;
+    font-family: Lato-Lightgst;
     font-size: 20px;
     margin-top: 25px;
     padding-bottom: 1.5%;
