--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -102,9 +102,9 @@
     height: 125px;
     width: 125px;
     border-radius: 50%;
-    background-color: #52B3E0;
+    background: linear-gradient(180deg, #52B3E0 0%, white 200%);
     position: fixed;
-    bottom: -50px;
+    bottom: -62.5px;
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
@@ -116,7 +116,7 @@
     border-radius: 10px;
     background-color: #F7F8F2;
     position: fixed;
-    bottom: 45px;
+    bottom: 40px;
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
@@ -246,7 +246,7 @@
 
 @media (max-width: 750px) {
   .intro_wrapper {
-    height: 175vh;
+    height: 200vh;
     background: linear-gradient(180deg, #0A2141 0%, #F7F8F2 750%);
     background-image: url("../images/mobile-rocket.png"), linear-gradient(180deg, #0A2141 0%, #F7F8F2 750%);
     background-size: contain;
@@ -260,7 +260,7 @@
     color: #F7F8F2;
     text-align: center;
     width: 100%;
-    height: 50%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -268,9 +268,9 @@
     justify-content: center; }
 
   .intro_logo {
-    width: 80%;
-    height: 30%;
-    background-image: url("../images/zb-logo-full-white.png");
+    width: 85%;
+    height: 25%;
+    background-image: url("../images/zb-logo-full.png");
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat; }
